fix: readability and tappability on small screens

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -59,11 +59,14 @@ h1, span {
   padding: 0 2px;
 }
 
-@media (max-width: @screen-xs-max) {
+@media (max-width: @screen-xs) {
   body {
-    font-size: 14px;
+    font-size: 16px;
   }
   h1 {
     font-size: 20px;
+  }
+  h1, span {
+    padding: 4px;
   }
 }
